[package]
name = "core-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
ndarray = { version = "0.16", features = ["serde"] }
tonic = "0.12" 
prost = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"

[build-dependencies]
tonic-build = "0.12"
