[package]
name = "worker-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["full"] }
ndarray = { version = "0.17.2", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
rayon = "1.11.0"
bincode = "1.3.3"

[build-dependencies]
tonic-build = "0.12"
